# WASMathician

./: Cargo.toml  README.md  calculator.wasm  index.html
src/: lib.rs  main.rs
