[package]
name = "wasm-calculator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm-calculator"
path = "src/main.rs"

[lib]
name = "wasm_calculator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasi = "0.11.0"
colored = "2.0"
term_size = "0.3"

[profile.release]
opt-level = 3
lto = true 